[package]
name = "apolo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "apolo"

[dependencies]
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sea-orm]
version = "^0.9.1"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
]